Add anomaly detection and update projects

--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "chai": "^4.3.4",
     "commander": "^2.6.0",
     "express": "^4.14.1",
+    "fast-csv": "^4.3.6",
+    "fs": "^0.0.1-security",
     "http-post": "^0.1.1",
     "http-proxy": "^1.8.1",
     "mocha": "^9.1.1",
     "mongodb": "^4.1.0",
+    "multer": "^1.4.3",
     "request": "^2.88.2",
     "socket.io": "^2.4.1"
   },
